--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap');
+
+.body{
+  font-family: 'Lora', serif;
+  color: grey;
+}
+
+.App{
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.title h1{
+  color: sandybrown;
+  font-weight: normal;
+  font-size: 1.5rem;
+}
+
+.input{
+  display: block;
+  margin: auto;
+}
+
+.title h2 , .title p{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title h2{
+  font-size: 2rem;
+  margin-top: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.progress-bar{
+  height: 5px;
+  background-color: sandybrown;
+  margin: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.img-grid{
+  margin: 20px , auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap:40px;
 }
 
-.App-link {
-  color: #61dafb;
+.image-wrap{
+  overflow: hidden;
+  height: 0;
+  padding: 50% 0;
+  position: relative;
+  opacity:0.8
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-wrap img{
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 150%;
+  position: absolute;
+  top :0;
+  left: 0;
 }
