--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,37 @@
   margin-top: 50px;
 }
 
+form{
+  margin: 30px auto 10px;
+  text-align: center;
+}
+label input{
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+label{
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid sandybrown;
+  border-radius: 50%;
+  margin: 10px auto;
+  line-height: 30px;
+  color: black;
+ 
+  font-weight: bold;
+  font-size: 24px;
+}
+label:hover{
+  background: sandybrown;
+  color:white;
+}
+.output{
+  height: 60px;
+  font-size: 0.8rem;
+}
+
 .progress-bar{
   height: 5px;
   background-color: sandybrown;
